--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
       - name: "Install dependencies"
         run: |
           sudo apt -y update
+          sudo apt -y install libgtk-3-dev
+
       - name: "Run make clean and make"
         run: make clean && make -j
 
