--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: "Install dependencies"
         run: |
           sudo apt -y update
-          sudo apt -y install libgtk-3-dev libpython3-dev
+          sudo apt -y install libgtk-3-dev libpython3-dev libsqlite3-dev
 
       - name: "Run make clean and make"
         run: make clean && make -j
